applications/omg-shoes/manifests/10_route.yml
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: omg-shoes
  # namespace: omg-shoes
spec:
  to:
    kind: Service
    name: omg-shoes
    weight: 100
  port:
    targetPort: "8080-tcp"
  tls:
    termination: edge
  wildcardPolicy: None
